# rustlearn

./: Cargo.toml  ansible_log_sample.txt  smol.txt
modlearn/: Cargo.toml
modlearn/src/: main.rs  utils.rs
rustlings_exercises/: quiz1.rs  quiz4.rs
rustlings_exercises/collections/: hashmap1.rs
rustlings_exercises/conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs
rustlings_exercises/error_handling/: errors6.rs
rustlings_exercises/option/: option2.rs  option3.rs
rustlings_exercises/primitive_types/: primitive_types2.rs  primitive_types4.rs
rustlings_exercises/standard_library_types/: iterators2.rs  iterators3.rs  iterators4.rs  iterators5.rs
rustlings_exercises/structs/: structs1.rs  structs3.rs
rustlings_exercises/threads/: threads1.rs
