[package]
name = "rustlearn"
version = "0.1.0"
authors = ["john li <jli@circularly.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
itertools = "0"
lazy_static = "1"
log = "0"
pretty_env_logger = "0"
regex = "1"
structopt = "0"
